Introduce app routing and news/article module. New article section created

--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>CryptotechWeb</title>
-    <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body class="Site">
-    <header>
-      <div class="header-content">
-        <div class="container">
-          <div>
-            <span class="title">CryptoTechSpace</span>
-          </div>
-          <div>
-            <span>All you need to know about crypto!</span>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <title>CryptotechWeb</title>
+  <base href="/" />
+
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
+
+<body class="Site">
+  <header>
+    <div class="header-content">
+      <div class="container">
+        <div>
+          <span class="title">CryptoTechSpace</span>
+        </div>
+        <div>
+          <span>All you need to know about crypto!</span>
         </div>
       </div>
-      <div class="header-nav">
-        <div class="container">
-          <nav class="navbar">
-            <ul>
-              <li><a href="/">News Hub</a></li>
-            </ul>
-          </nav>
-        </div>
+    </div>
+    <div class="header-nav">
+      <div class="container">
+        <nav class="navbar">
+          <ul>
+            <li><a href="/news">News</a></li>
+            <li><a href="/articles">Articles</a></li>
+          </ul>
+        </nav>
       </div>
-    </header>
-    <app-root></app-root>
-    <footer>&copy; 2019 www.cryptotechspace.com</footer>
-  </body>
+    </div>
+  </header>
+  <app-root></app-root>
+  <footer>&copy; 2019 www.cryptotechspace.com</footer>
+</body>
+
 </html>
