--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
           <ul>
             <li><a href="/news">News</a></li>
             <li><a href="/articles">Articles</a></li>
+            <li><a href="/tweets">Tweets</a></li>
           </ul>
         </nav>
       </div>
