Added video section

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
             <li><a href="/news">News</a></li>
             <li><a href="/articles">Articles</a></li>
             <li><a href="/tweets">Tweets</a></li>
+            <li><a href="/videos">Videos</a></li>
           </ul>
         </nav>
       </div>
