Added a reddit section

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
             <li><a href="/articles">Articles</a></li>
             <li><a href="/tweets">Tweets</a></li>
             <li><a href="/videos">Videos</a></li>
+            <li><a href="/reddit">Reddit Posts</a></li>
           </ul>
         </nav>
       </div>
