Added Logo & Favicon

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>CryptotechWeb</title>
+  <title>CryptoTechSpace.com</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,11 +14,18 @@
   <header>
     <div class="header-content">
       <div class="container">
-        <div>
-          <span class="title">CryptoTechSpace</span>
-        </div>
-        <div>
-          <span>All you need to know about crypto!</span>
+        <div class="flex flex-row">
+          <div class="mr-5">
+            <img src="/assets/images/cryptotechspace.png" />
+          </div>
+          <div>
+            <div>
+              <span class="title">CryptoTechSpace</span>
+            </div>
+            <div>
+              <span>All you need to know about crypto!</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
